syntax = "proto3";

package blogger_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "validate/validate.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/Georgy27/blogger_api/pkg/proto/blogger_v1;blogger_v1";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Blogger API"
    version: "1.0.0"
    contact: {
      name: "Georgy P"
      email: "Aegoraa@yandex.ru"
    };
  };

  host: "localhost:8080",
  schemes: HTTP,
  schemes: HTTPS,
  consumes: "application/json",
  produces: "application/json",
};

service BloggerV1 {
  rpc CreateBlog(CreateBlogRequest) returns (CreateBlogResponse){
    option (google.api.http) = {
      post: "/v1/blogs"
      body: "*"
    };
  };
  rpc UpdateBlog(UpdateBlogRequest) returns (google.protobuf.Empty){
    option (google.api.http) = {
      patch: "/v1/blogs/{id}"
      body: "*"
    };
  };
  rpc DeleteBlog(DeleteBlogRequest) returns (google.protobuf.Empty){
    option (google.api.http) = {
      delete: "/v1/blogs/{id}"
    };
  };
  rpc GetBlog(GetBlogRequest) returns (GetBlogResponse){
    option (google.api.http) = {
      get: "/v1/blogs/{id}"
    };
  };
  rpc ListBlogs(ListBlogsRequest) returns (ListBlogsResponse){
    option (google.api.http) = {
      get: "/v1/blogs"
    };
  };
}

message BlogInfo {
  string name = 1;
  string description = 2;
  string website_url = 3;
}

message Blog {
  int64 id = 1;
  BlogInfo info = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}

message CreateBlogRequest {
  string name = 1;
  string description = 2;
  string website_url = 3;
}

message CreateBlogResponse {
  Blog blog = 1;
}

message UpdateBlogRequest {
  int64 id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue description = 3;
  google.protobuf.StringValue website_url = 4;
}

message DeleteBlogRequest {
  int64 id = 1;
}

message GetBlogRequest {
  int64 id = 1;
}

message GetBlogResponse {
  Blog blog = 1;
}

message ListBlogsRequest {
  int64 limit = 1;
  int64 offset = 2;
}

message ListBlogsResponse {
  repeated Blog blog = 1;
}
